added placeholder image

--- a/example/network/index.html
+++ b/example/network/index.html
@@ -79,7 +79,7 @@
   <strong id="popupName"></strong><br>
   <span id="popupCategory"></span><br>
   <span id="popupImpact"></span><br><br>
-  <img id="popupImage" src="https://via.placeholder.com/280x150" style="width:100%; border-radius:6px; margin-top:10px;" />
+  <img id="popupImage" src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184727-O47THN4VEAP4S1WAEAML/image+%2819%29.png" style="width:100%; border-radius:6px; margin-top:10px;" />
 </div>
 <script>
   const entities = [
