implemented closing the info popup when clicking off of the popup

--- a/example/network/index.html
+++ b/example/network/index.html
@@ -279,6 +279,17 @@
     // document.getElementById('popupImage').src = `someDynamicImagePath/${node.name}.jpg`;
 
     document.getElementById('infoPopup').style.display = 'block';
+
+    // Close info popup when clicking outside of it
+    document.addEventListener('click', function(event) {
+      const popup = document.getElementById('infoPopup');
+      const isClickInsidePopup = popup.contains(event.target);
+      const isNodeClick = event.target.closest('canvas'); // Check if click was on graph canvas
+
+      if (!isClickInsidePopup && !isNodeClick) {
+        popup.style.display = 'none';
+      }
+    });
   })
 
     // Filters UI
