--- a/example/network/index.html
+++ b/example/network/index.html
@@ -378,6 +378,13 @@
 
     Graph.graphData({ nodes: filteredNodes, links: filteredLinks });
 
+    // Prevent auto zoom by re-centering manually
+    const centerNode = filteredNodes.find(n => n.id === centerNodeId);
+    if (centerNode) {
+      Graph.centerAt(centerNode.x, centerNode.y, 0); // (x, y, ms transition duration)
+      Graph.zoom(1, 0); // Keep zoom at 1x (or whatever zoom you prefer)
+    }
+
       // Populate entity list for selected category
     const entityListContainer = document.getElementById('entityList');
     entityListContainer.innerHTML = '';
@@ -413,6 +420,12 @@
           }));
 
           Graph.graphData({ nodes: filteredNodes, links: filteredLinks });
+
+          const centerNode = filteredNodes.find(n => n.id === centerNodeId);
+          if (centerNode) {
+            Graph.centerAt(centerNode.x, centerNode.y, 0);
+            Graph.zoom(1, 0);
+          }
         };
 
         entityListContainer.appendChild(item);
