--- a/example/network/index.html
+++ b/example/network/index.html
@@ -267,6 +267,28 @@
         ctx.fill();
       }
     })
+  .linkCanvasObject((link, ctx, globalScale) => {
+    const start = link.source;
+    const end = link.target;
+
+    if (typeof start !== 'object' || typeof end !== 'object') return;
+
+    const label = link.name || ''; // Or any label you want
+
+    if (!label) return; // Skip if no label
+
+    const fontSize = 12 / globalScale; // Scale font size depending on zoom
+    ctx.font = `${fontSize}px Sans-Serif`;
+    ctx.fillStyle = '#555';
+    ctx.textAlign = 'left';
+    ctx.textBaseline = 'middle';
+
+    // Draw the label slightly offset from the end of the link
+    const offset = 4;
+    ctx.fillText(label, end.x + offset, end.y);
+  })
+  .linkCanvasObjectMode(() => 'after'); // Make sure labels are drawn AFTER links
+
   .nodeLabel(node => node.name || '')
   .onNodeClick(node => {
 
