--- a/example/network/index.html
+++ b/example/network/index.html
@@ -247,26 +247,37 @@
   .linkColor(() => '#000000')
   .nodeCanvasObject((node, ctx, globalScale) => {
     if (node.id === centerNodeId) {
-        // Draw concentric rings around center
+      // Draw concentric rings around center
       ctx.save();
-        ctx.translate(node.x, node.y); // Needed to draw arcs at the center node's position
-        ctx.strokeStyle = '#ddd';
-        ctx.lineWidth = 1;
-        for (let i = 0; i < maxLayers; i++) {
-          ctx.beginPath();
-          ctx.arc(0, 0, baseRadius + i * ringSpacing, 0, 2 * Math.PI);
-          ctx.stroke();
-        }
-        ctx.restore();
-      } else {
-        // Draw normal node
-        const size = node.size || 4;
+      ctx.translate(node.x, node.y);
+      ctx.strokeStyle = '#ddd';
+      ctx.lineWidth = 1;
+      for (let i = 0; i < maxLayers; i++) {
         ctx.beginPath();
-        ctx.arc(node.x, node.y, size, 0, 2 * Math.PI, false);
-        ctx.fillStyle = node.color || '#666';
-        ctx.fill();
+        ctx.arc(0, 0, baseRadius + i * ringSpacing, 0, 2 * Math.PI);
+        ctx.stroke();
       }
-    })
+      ctx.restore();
+    } else {
+      // Draw normal node
+      const size = node.size || 4;
+      ctx.beginPath();
+      ctx.arc(node.x, node.y, size, 0, 2 * Math.PI, false);
+      ctx.fillStyle = node.color || '#666';
+      ctx.fill();
+
+      // ---- ADD LABELS ONLY for tip nodes ----
+      if (node.size <= 0.1 && node.name) { // only tip nodes that have a name
+        const label = node.name;
+        const fontSize = 12 / globalScale; // scale font with zoom
+        ctx.font = `${fontSize}px Sans-Serif`;
+        ctx.fillStyle = '#111'; // dark color for text
+        ctx.textAlign = 'center';
+        ctx.textBaseline = 'middle';
+        ctx.fillText(label, node.x, node.y);
+      }
+    }
+  })
   .nodeLabel(node => node.name || '')
   .onNodeClick(node => {
 
