--- a/example/network/index.html
+++ b/example/network/index.html
@@ -215,32 +215,53 @@
   .linkWidth(() => 0.5)
   .linkColor(() => '#000000')
   .nodeCanvasObject((node, ctx, globalScale) => {
-    if (node.size <= 0.1 && node.name) { // Only for tip nodes
-    const { fx, fy } = node;
-    const angle = Math.atan2(fy, fx); // Get angle of the node
+    if (node.id === centerNodeId) {
+      // Draw concentric rings around center
+      ctx.save();
+      ctx.translate(node.x, node.y);
+      ctx.strokeStyle = '#ddd';
+      ctx.lineWidth = 1;
+      for (let i = 0; i < maxLayers; i++) {
+        ctx.beginPath();
+        ctx.arc(0, 0, baseRadius + i * ringSpacing, 0, 2 * Math.PI);
+        ctx.stroke();
+      }
+      ctx.restore();
+    } else {
+      // Draw normal node
+      const size = node.size || 4;
+      ctx.beginPath();
+      ctx.arc(node.x, node.y, size, 0, 2 * Math.PI, false);
+      ctx.fillStyle = node.color || '#666';
+      ctx.fill();
 
-    ctx.save(); // Save current canvas state
+      if (node.size <= 0.1 && node.name) { // Only for tip nodes
+        const { fx, fy } = node;
+        const angle = Math.atan2(fy, fx); // Get angle of the node
 
-    ctx.translate(fx, fy); // Move origin to node position
-    ctx.rotate(angle);     // Rotate canvas to align with radial line
+        ctx.save(); // Save current canvas state
 
-    ctx.font = '10px sans-serif';
-    ctx.textAlign = 'left';
-    ctx.textBaseline = 'middle';
-    ctx.fillStyle = '#000';
-    ctx.strokeStyle = '#000';
+        ctx.translate(fx, fy); // Move origin to node position
+        ctx.rotate(angle);     // Rotate canvas to align with radial line
 
-    const padding = 4;
-    const text = node.name;
-    const textWidth = ctx.measureText(text).width;
+        ctx.font = '10px sans-serif';
+        ctx.textAlign = 'left';
+        ctx.textBaseline = 'middle';
+        ctx.fillStyle = '#000';
+        ctx.strokeStyle = '#000';
 
-    // Draw background box (outline only)
-    ctx.strokeRect(-padding, -10/2 - padding/2, textWidth + 2*padding, 10 + padding);
+        const padding = 4;
+        const text = node.name;
+        const textWidth = ctx.measureText(text).width;
 
-    // Draw text
-    ctx.fillText(text, 0, 0);
+        // Draw background box (outline only)
+        ctx.strokeRect(-padding, -10/2 - padding/2, textWidth + 2*padding, 10 + padding);
 
-    ctx.restore(); // Restore original state
+        // Draw text
+        ctx.fillText(text, 0, 0);
+
+        ctx.restore(); // Restore original state
+      }
     }
   })
   .nodeLabel(node => node.name || '')
