--- a/example/network/index.html
+++ b/example/network/index.html
@@ -235,14 +235,17 @@
       ctx.fillStyle = node.color || '#666';
       ctx.fill();
 
-      if (node.size <= 0.1 && node.name) { // Only for tip nodes
+       if (node.size <= 0.1 && node.name) {
         const { fx, fy } = node;
-        const angle = Math.atan2(fy, fx); // Get angle of the node
+        const angle = Math.atan2(fy, fx);
+        const nodeRadius = 5; // Approximate radius of the node, adjust if needed
+        const gap = 5; // Extra spacing between node and label
 
-        ctx.save(); // Save current canvas state
+        ctx.save();
 
-        ctx.translate(fx, fy); // Move origin to node position
-        ctx.rotate(angle);     // Rotate canvas to align with radial line
+        ctx.translate(fx, fy);
+        const flip = (angle > Math.PI/2 || angle < -Math.PI/2);
+        ctx.rotate(flip ? angle + Math.PI : angle);
 
         ctx.font = '10px sans-serif';
         ctx.textAlign = 'left';
@@ -254,13 +257,16 @@
         const text = node.name;
         const textWidth = ctx.measureText(text).width;
 
-        // Draw background box (outline only)
-        ctx.strokeRect(-padding, -10/2 - padding/2, textWidth + 2*padding, 10 + padding);
+        // Calculate label starting position
+        const labelX = nodeRadius + gap;
+
+        // Draw outline box
+        ctx.strokeRect(labelX - padding, -10/2 - padding/2, textWidth + 2*padding, 10 + padding);
 
         // Draw text
-        ctx.fillText(text, 0, 0);
+        ctx.fillText(text, labelX, 0);
 
-        ctx.restore(); // Restore original state
+        ctx.restore();
       }
     }
   })
