--- a/example/network/index.html
+++ b/example/network/index.html
@@ -85,7 +85,7 @@
   const entities = [
     { name: 'URF / TX The BOX', categories: ['Investment'], impacts: ['Retail'] },
     { name: 'SAUVEREIGN', categories: ['Investment'], impacts: ['Branding', 'Retail'] },
-    { name: 'DONGHAI', categories: ['Investment'], impacts: ['East.West', 'Strategy.Culture'] },
+    { name: 'DONGHAI', categories: ['Investment'], impacts: ['East.West', 'Edu.Learning.Collective'] },
     { name: 'EASTERN SEAS', categories: ['Investment'], impacts: ['Creative Solution'] },
     { name: 'DANDELION', categories: ['Investment'], impacts: ['Strategy.Culture', 'Edu.Learning.Collective'] },
     { name: 'BILI Q', categories: ['Investment'], impacts: ['East.West'] },
@@ -93,7 +93,7 @@
     { name: 'ARAMIS WINES', categories: ['Investment'], impacts: ['Branding'] },
     { name: 'SEIICHI MIZUNO', categories: ['Forces'], impacts: ['Retail'] },
     { name: 'MARIO TESTINO', categories: ['Forces'], impacts: ['Branding', 'Retail'] },
-    { name: 'JUDY DOBIAS', categories: ['Forces'], impacts: ['East.West', 'Strategy.Culture'] },
+    { name: 'JUDY DOBIAS', categories: ['Forces'], impacts: ['East.West', 'Edu.Learning.Collective'] },
     { name: 'THE CROSSES', categories: ['Forces'], impacts: ['Creative Solution'] },
     { name: 'SUNTCHI', categories: ['Forces'], impacts: ['Strategy.Culture', 'Edu.Learning.Collective'] },
     { name: 'SHANGHAI INDUSTRIAL MUSEUM', categories: ['Consultancies'], impacts: ['East.West'] },
@@ -101,7 +101,7 @@
     { name: 'MOLESKINE', categories: ['Consultancies'], impacts: ['Branding'] },
     { name: 'LUXEMBOURG IN CHINA', categories: ['Cities.culture.art'], impacts: ['Retail'] },
     { name: 'TONGJI UNIVERSITY', categories: ['Cities.culture.art'], impacts: ['Branding', 'Retail'] },
-    { name: 'UNIVERSITY COLLABORATIONS', categories: ['Cities.culture.art'], impacts: ['East.West', 'Strategy.Culture'] },
+    { name: 'UNIVERSITY COLLABORATIONS', categories: ['Cities.culture.art'], impacts: ['East.West', 'Edu.Learning.Collective'] },
     { name: 'CONFUCIUS SECONDARY SCHOOL', categories: ['Cities.culture.art'], impacts: ['Creative Solution'] },
     { name: 'DANISH DESIGN AWARD', categories: ['Cities.culture.art'], impacts: ['Strategy.Culture', 'Edu.Learning.Collective'] },
     { name: 'WORLD DESIGN CAPITAL', categories: ['Cities.culture.art'], impacts: ['East.West'] },
